Codeforces/Codeforces - Codeforces Round #645 (Div. 2)/C. Celex Update/attic/stderr
C:\Users\Yash Soni\Documents\Programs\Codeforces\Codeforces - Codeforces Round #645 (Div. 2)\C. Celex Update\sol.cpp:50:9: error: stray '\314' in program
         cout<<abs(r-c)*(abs(r-c)-1)+(max(r,c)-abs(r-c))*(abs(r-c)+1)<<endl;̥
         ^
C:\Users\Yash Soni\Documents\Programs\Codeforces\Codeforces - Codeforces Round #645 (Div. 2)\C. Celex Update\sol.cpp:50:9: error: stray '\245' in program
